--- a/client/src/components/Login.css
+++ b/client/src/components/Login.css
@@ -3,57 +3,72 @@
     justify-content: center;
     align-items: center;
     height: 100vh;
-    background-color: #f5f5f5;
+    width:208vh;
+    background-color: #ee3131;
   }
   
   .login-box {
     background: white;
     padding: 2rem;
-    border-radius: 10px;
+    border-top-left-radius: 80px;
+    border-bottom-left-radius: 80px;
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
-    width: 100%;
-    max-width: 400px;
+    height: 95%;
+    width: 170%;
+    max-width: 900px;
     text-align: center;
   }
   
+  .login-container h2 {
+    margin-bottom: 1rem;
+    font-size: 3.5rem;
+    color: #faf9f9;
+    
+  }
   .login-box h2 {
     margin-bottom: 1rem;
-    font-size: 2rem;
-    color: #333;
-  }
-  
-  .login-box p {
-    margin-bottom: 1.5rem;
-    color: #666;
+    font-size: 3.5rem;
+    color: #060606;
+    text-align: center;
+    
   }
   
   .social-login {
     display: flex;
-    flex-direction: column;
-    gap: 1rem;
+    flex-direction: row; 
+    gap: 6rem; 
     margin-bottom: 1.5rem;
+   
   }
   
-  .social-button {
-    padding: 0.75rem;
+  .social-login {
+    padding: 10px;
     border: none;
-    border-radius: 5px;
-    font-size: 1rem;
+    border-radius: 10px;
     cursor: pointer;
     display: flex;
     align-items: center;
     justify-content: center;
-    gap: 0.5rem;
+    gap: 5rem; 
+  
   }
   
-  .social-button.google {
-    background-color: #db4437;
-    color: white;
+  .social-button-google {
+    width:300px;
+    border-radius: 20px;
+    padding: 5px;
+    font-size: 1.2rem;
+    background-color:white;
+    color: rgb(9, 8, 8);
   }
   
-  .social-button.facebook {
-    background-color: #1877f2;
-    color: white;
+  .social-button-facebook {
+    width:300px;
+    border-radius: 20px;
+    padding: 5px;
+    font-size: 1.2rem;
+    background-color: white;
+    color:  rgb(9, 8, 8);
   }
   
   .divider {
