--- a/client/src/components/SignUp.css
+++ b/client/src/components/SignUp.css
@@ -2,7 +2,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 100vh;
+  height: 90%;
   width:208vh;
   background-color: #ee3131;
   }
@@ -13,7 +13,7 @@
     border-top-left-radius: 80px;
     border-bottom-left-radius: 80px;
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
-    height: 95%;
+    height: 90%;
     width: 170%;
     max-width: 900px;
     text-align: center;
@@ -28,10 +28,9 @@
     margin-bottom: 1rem;
     font-size: 3.5rem;
     color: #060606;
-    text-align: center;
+    text-align: left;
     
-  }
-  
+  }  
    
   .social-signup {
     display: flex;
@@ -142,15 +141,15 @@
   .user-type-selector {
     display: flex;
     justify-content: center;
-    gap: 20px;
-    margin-bottom: 1.5rem;
+    gap: 50px;
+    margin-bottom: 0.5rem;
   }
   
   .user-type-selector label {
     display: flex;
     align-items: center;
     gap: 0.5rem;
-    font-size: 1rem;
+    font-size: 1.5rem;
     color: #333;
   }
   
