--- a/client/src/components/SignUp.css
+++ b/client/src/components/SignUp.css
@@ -21,14 +21,14 @@
   
   .signup-container h2 {
     margin-bottom: 1rem;
-    font-size: 3.5rem;
+    font-size: 2.8rem;
     color: #faf9f9;
   }
   .signup-box h2 {
     margin-bottom: 1rem;
-    font-size: 3.5rem;
+    font-size: 2.8rem;
     color: #060606;
-    text-align: left;
+    text-align: center;
     
   }  
    
