--- a/client/src/components/Login.css
+++ b/client/src/components/Login.css
@@ -2,18 +2,18 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100vh;
+    height: 100%;
     width:208vh;
-    background-color: #ee3131;
+    background-color: #df1414;
   }
   
   .login-box {
     background: white;
     padding: 2rem;
-    border-top-left-radius: 80px;
-    border-bottom-left-radius: 80px;
+    border-top-left-radius: 50px;
+    border-bottom-left-radius: 50px;
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
-    height: 80%;
+    height: 100%;
     width: 170%;
     max-width: 900px;
     text-align: center;
