--- a/client/src/components/Login.css
+++ b/client/src/components/Login.css
@@ -10,12 +10,12 @@
   .login-box {
     background: white;
     padding: 2rem;
-    border-top-left-radius: 50px;
-    border-bottom-left-radius: 50px;
+    border-radius: 20px 0px 20px 0px;
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
-    height: 100%;
+    height: 90%;
     width: 170%;
     max-width: 900px;
+    margin:20px;
     text-align: center;
   }
   
@@ -23,6 +23,7 @@
     margin-bottom: 1rem;
     font-size: 2.8rem;
     color: #faf9f9;
+    padding: 20px;
     
   }
   .login-box h2 {
