--- a/client/src/components/SignUp.css
+++ b/client/src/components/SignUp.css
@@ -3,7 +3,7 @@
   justify-content: center;
   align-items: center;
   height: 100%;
-  width:208vh;
+  width:100%;
   background-color: #df1414;
   }
   
