--- a/client/src/components/EventsPage.css
+++ b/client/src/components/EventsPage.css
@@ -183,7 +183,7 @@
 .view-bookings-btn {
   margin-top: 25px;
   padding: 12px 30px;
-  background-color: #6c5ce7;  /* Bright purple */
+  background-color: #6c5ce7; 
   color: white;
   border: none;
   border-radius: 30px;
